# SFME

./: .gitmodules  CMakeLists.txt  README.md
SFME/: CMakeLists.txt
SFME/ecs/: CMakeLists.txt  CMakeSources.cmake
SFME/ecs/SFME/ecs/: common_components.hpp  ecs.hpp  entity_manager.hpp  system.hpp  system_base.hpp  system_manager.hpp  system_type.hpp  world.hpp
SFME/ecs/SFME/ecs/details/: entity.hpp  system_type_id.hpp  system_type_traits.hpp  utils.hpp
SFME/input/: CMakeLists.txt  CMakeSources.cmake
SFME/input/SFME/input/: input.hpp  keyboard.hpp  mouse.hpp
SFME/mediator/: CMakeLists.txt  CMakeSources.cmake
SFME/mediator/SFME/mediator/: base_event.hpp  common_events.hpp  config.hpp  event_manager.hpp  mediator.hpp  receiver.hpp
SFME/mediator/SFME/mediator/details/: event_callback_wrapper.hpp  type_id.hpp  type_traits.hpp
SFME/resource_manager/: CMakeLists.txt  CMakeSources.cmake
SFME/resource_manager/SFME/resource_manager/: base_resource_manager.hpp
SFME/scripting/: CMakeLists.txt  CMakeSources.cmake
SFME/scripting/SFME/scripting/: scripting.hpp  scripting_base.hpp  scripting_engine.hpp  scripting_lua.hpp
SFME/sfml/: CMakeLists.txt  CMakeSources.cmake
SFME/sfml/SFME/sfml/: components.hpp  resource_manager.hpp  sfml.hpp  systems.hpp
SFME/sfml/SFME/sfml/components/: drawable.hpp
SFME/sfml/SFME/sfml/systems/: event.hpp  graphical.hpp
SFME/timer/: CMakeLists.txt  CMakeSources.cmake
SFME/timer/SFME/timer/: fps.hpp  timer.hpp  timestep.hpp
SFME/world/: CMakeLists.txt  CMakeSources.cmake
SFME/world/SFME/world/: base_world.hpp  world.hpp  world_traits.hpp
SFME/world/SFME/world/details/: world_traits.hpp
example/: CMakeLists.txt
example/base/: CMakeLists.txt  CMakeSources.cmake  main.cpp
example/ecs/: CMakeLists.txt  CMakeSources.cmake  ecs_common_example.hpp  ecs_plugin_bar.cpp  ecs_plugin_bar.hpp  ecs_plugin_foo.cpp  ecs_plugin_foo.hpp  ecs_system_create_system.cpp  ecs_system_enable_disable_system.cpp  ecs_system_update_system.cpp
example/mediator/: CMakeLists.txt  CMakeSources.cmake  mediator_emit.cpp  mediator_full_example.cpp  mediator_receiver.cpp  mediator_show_events.cpp  mediator_subscribe.cpp
example/sfml/: CMakeLists.txt  main.cpp
example/timestep/: CMakeLists.txt  CMakeSources.cmake  main.cpp
scripts/: jenkins-build.ps1  jenkins-build.sh  pull.sh
sourcetrail/: SFME.srctrlbm  SFME.srctrldb  SFME.srctrlprj
tests/ecs-test/: CMakeLists.txt  common_ecs_test.hpp  ecs-entity_test.cpp  ecs-system-test.cpp  ecs-test.cpp  ecs_plugin_bar.cpp  ecs_plugin_bar.hpp  ecs_plugin_foo.cpp  ecs_plugin_foo.hpp
tests/input-test/: CMakeLists.txt  input-test.cpp
tests/mediator-test/: CMakeLists.txt  events.hpp  mediator-test.cpp  receivers.hpp
tests/scripting-test/: CMakeLists.txt  scripting-test.cpp  scripting_world_test.hpp
tests/scripting-test/lua_scripts/: player.lua  test.lua
tests/timer-test/: CMakeLists.txt  timer-test.cpp
tests/world-test/: CMakeLists.txt  world-test.cpp  world_common_test.hpp
