include(CMakeSources.cmake)
set(MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
CREATE_MODULE(SFME::Scripting "${MODULE_SOURCES}" ${MODULE_PATH})
target_link_libraries(SFME-Scripting INTERFACE SFME::ECS Core::Log)
if (SFME_USING_LUA_SCRIPTING)
    find_package(Lua 5.3)
    target_link_libraries(SFME-Scripting INTERFACE ${LUA_LIBRARIES})
    target_include_directories(SFME-Scripting INTERFACE "${CMAKE_SOURCE_DIR}/vendor/sol2" "${LUA_INCLUDE_DIR}")
endif()

if (LINUX)
    target_link_libraries(SFME-Scripting INTERFACE stdc++fs)
endif(LINUX)

if(APPLE)
    target_link_libraries(SFME-Scripting INTERFACE /usr/local/lib/libc++experimental.a)
endif(APPLE)
