set(SOURCES scripting-test.cpp scripting_world_test.hpp)
CREATE_UNIT_TEST(scripting-test SFME: "${SOURCES}")
target_link_libraries(scripting-test SFME::World)
#target_compile_definitions(scripting-test PUBLIC LOGGER_DISABLE_ALL)
#if (GCC OR CLANG)
#    target_compile_options(scripting-test PUBLIC -Wno-unused-parameter)
#endif()